# mnemo

./: .gitignore  README.md  pyproject.toml
apple_scripts/: get_notes.scpt
src/mnemo/: cli.py  enums.py  indexer.py  main.py  pipeline.py  run_applescript.py  sources.py  test_cli.py
src/mnemo/apple_scripts/: get_notes copy.scpt  get_notes.scpt
src/mnemo/utils/: apple_notes.py  config.py  debug.py  export_apple_notes.py  storage.py  text.py
src/mnemo_cli/: __init__.py  cli.py  enums.py  indexer.py  pipeline.py  sources.py
src/mnemo_cli/utils/: config.py  debug.py  note_url.py  storage.py  text.py
tests/: test_cli.py  test_indexer.py  test_pipeline.py  test_text.py
