[project]
name = "mnemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mick Ruabshkin", email = "mikhail.rubashkin@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "typer>=0.20.0",
]

[project.scripts]
mnemo = "mnemo.main:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
