[project]
name = "mnemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mick Ruabshkin", email = "mikhail.rubashkin@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "questionary>=2.1.1",
    "snowballstemmer>=3.0.1",
    "typer>=0.20.0",
]

[project.scripts]
mnemo = "mnemo.cli:app"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
