[project]
name = "mnemo-cli"
version = "0.1.2"
description = "Local CLI tool for indexing and searching personal notes"
readme = "README.md"
authors = [
    { name = "Mick Rubashkin", email = "mikhail.rubashkin@gmail.com" }
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: MacOS",
]

requires-python = ">=3.11"
dependencies = [
    "questionary>=2.1.1",
    "snowballstemmer>=3.0.1",
    "typer>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/mickrubashkin/mnemo"
Repository = "https://github.com/mickrubashkin/mnemo"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
mnemo = "mnemo_cli.cli:app"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
